@@ -1,6 +1,6 @@
 /*
  * ArmorStandEditor: Bukkit plugin to allow editing armor stand attributes
- * Copyright (C) 2016  RypoFalem
+ * Copyright (C) 2016-2023  RypoFalem
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -17,18 +17,19 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  */
 
+
 package io.github.rypofalem.armorstandeditor.language;
 
 import io.github.rypofalem.armorstandeditor.ArmorStandEditorPlugin;
+
 import org.bukkit.ChatColor;
 import org.bukkit.configuration.file.YamlConfiguration;
 
 import java.io.*;
-import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 
 public class Language {
-    final String DEFAULTLANG = "en_US.yml";
+    final String DEFAULT_LANG = "en_US.yml";
     private YamlConfiguration langConfig = null;
     private YamlConfiguration defConfig = null;
     private File langFile = null;
@@ -40,11 +41,11 @@ public class Language {
     }
 
     public void reloadLang(String langFileName) {
-        if (langFileName == null) langFileName = DEFAULTLANG;
+        if (langFileName == null) langFileName = DEFAULT_LANG;
         File langFolder = new File(plugin.getDataFolder().getPath() + File.separator + "lang");
         langFile = new File(langFolder, langFileName);
 
-        InputStream input = plugin.getResource("lang" + "/" + DEFAULTLANG); //getResource doesn't accept File.seperator on windows, need to hardcode unix seperator "/" instead
+        InputStream input = plugin.getResource("lang" + "/" + DEFAULT_LANG); //getResource doesn't accept File.seperator on windows, need to hardcode unix seperator "/" instead
         assert input != null;
         Reader defaultLangStream = new InputStreamReader(input, StandardCharsets.UTF_8);
         defConfig = YamlConfiguration.loadConfiguration(defaultLangStream);
@@ -88,14 +89,14 @@ public class Language {
         return getMessage(path, "info");
     }
 
-    public String getRawMessage(String path, String format, String option){
+    public String getRawMessage(String path, String format, String option) {
         String message = ChatColor.stripColor(getMessage(path, format, option));
         format = getFormat(format);
         ChatColor color = ChatColor.WHITE;
         String bold = "" , italic = "" , underlined = "" , obfuscated = "" , strikethrough = "";
-        for(int i = 0; i < format.length(); i++){
+        for (int i = 0; i < format.length(); i++) {
             ChatColor code = ChatColor.getByChar(format.charAt(i));
-            switch(code) {
+            switch (code) {
                 case MAGIC:
                     obfuscated = ", \"obfuscated\": true";
                     break;
@@ -114,11 +115,11 @@ public class Language {
                 default: color = !code.isColor() ? color : code;
             }
         }
-        return String.format("{\"text\":\"%s\", \"color\":\"%s\"%s%s%s%s%s}", message, color.name().toLowerCase(),
+        return "{\"text\":\"%s\", \"color\":\"%s\"%s%s%s%s%s}".formatted(message, color.name().toLowerCase(),
             obfuscated, bold, strikethrough, underlined, italic);
     }
 
-    private String getFormat(String format){
+    private String getFormat(String format) {
         format = getString(format);
         return format == null ? "" : format;
     }
